# mcqui

./: CMakeLists.txt  README.md
include/: enventoryslotwidget.h  mainwindow.h
include/mcqui/: ItemWidget.h
include/mcqui/data/: settings.h
include/mcqui/util/: mcversion.h
src/: enventoryslotwidget.cpp  main.cpp  mainwindow.cpp
